# Gouvernement

./: README.md  database.db  main.py  pyproject.toml  requirements.txt
Gouvernement/: __init__.py  auth.py  models.py  tasks.py  views.py
Gouvernement/aux/: sample_data.py  task_rights.py  tools.py  user_rights.py
Gouvernement/templates/: base.html  projects_info.html  tasks_edit.html
Gouvernement/templates/auth/: login.html  sign_up.html
Gouvernement/templates/projects/: project_from_task_info.html  projects.html  projects_edit.html  projects_init.html
Gouvernement/templates/tasks/: tasks.html  tasks_disjoint_info.html  tasks_edit.html  tasks_info.html  tasks_init.html
instance/: database.db
tests/: tools_test.py
website/: __init__.py  auth.py  models.py  tasks.py  views.py
website/aux/: sample_data.py  tools.py
website/templates/: base.html  home.html  login.html  projects.html  projects_edit.html  projects_info.html  projects_init.html  sign_up.html  tasks_edit.html  tasks_info.html  tasks_init.html
website/website/: __init__.py  auth.py  pyproject.toml  views.py
