[tool.poetry]
name = "gouvernement web task manager"
version = "0.1.0"
description = ""
authors = ["karbyshevillia <158076825+karbyshevillia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
